--- a/index.html
+++ b/index.html
@@ -11,51 +11,8 @@
 
 <body>
   <div id="root"></div>
-  <script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-    import { getMessaging } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-messaging.js";
-
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyDkIVEP5noZcsUrPYnK7Kn7rx5kCk9VF6g",
-      authDomain: "noti-sasiapp.firebaseapp.com",
-      projectId: "noti-sasiapp",
-      storageBucket: "noti-sasiapp.appspot.com",
-      messagingSenderId: "198484255262",
-      appId: "1:198484255262:web:786246eb4034b9deae440f"
-    };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const messaging = getMessaging(app);
-    // Request permission and get FCM token
-    Notification.requestPermission().then((permission) => {
-      if (permission === 'granted') {
-        messaging.getToken().then((token) => {
-          console.log('FCM Token:', token);
-          // Send this token to your server or use it as needed
-        }).catch((err) => {
-          console.error('Error getting FCM token:', err);
-        });
-      } else {
-        console.warn('Notifications permission denied');
-      }
-    });
-    
-    messaging.onTokenRefresh(() => {
-      messaging.getToken().then((refreshedToken) => {
-        console.log('Refreshed FCM Token:', refreshedToken);
-        // Send the refreshed token to your server or update it as needed
-      }).catch((err) => {
-        console.error('Error refreshing FCM token:', err);
-      });
-    });
-
-
-  </script>
+  <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
