--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/src/assets/logo.jpg" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SASI Delivery</title>
+  <title>SASI POS</title>
 </head>
 
 <body>
