--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/src/assets/logo.jpg" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SASI POS</title>
+  <title>SASI Delivery </title>
 </head>
 
 <body>
@@ -14,6 +14,9 @@
   <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   <script type="module" src="/src/main.jsx"></script>
+  <script async defer crossorigin="anonymous" 
+  src="https://connect.facebook.net/en_US/sdk.js"></script>
+
 </body>
 
 </html>
