--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   <script type="module" src="/src/main.jsx"></script>
-
+  <script async defer crossorigin="anonymous" 
+  src="https://connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v16.0" 
+  nonce="ABC123"></script>
 
 </body>
 
