--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 <body>
   <div id="root"></div>
-  
-
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0&appId=831737185629037"></script>
   <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   <script type="module" src="/src/main.jsx"></script>
