--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/src/assets/logo.jpg" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SASI FOOD</title>
+  <title>SASI FOOD 555</title>
 </head>
 
 <body>
